--- a/app/src/main/res/layout/nav_header_items.xml
+++ b/app/src/main/res/layout/nav_header_items.xml
@@ -11,8 +11,8 @@
         android:id="@+id/imageView"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="36dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -24,10 +24,9 @@
         android:layout_marginBottom="8dp"
         android:textSize="14sp"
         android:fontFamily="@font/space_grotesk_regular"
-        android:text="forexample@gmail.com"
+        android:text="@string/for_example_gmail_com"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        tools:ignore="HardcodedText" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
