--- a/app/src/main/res/layout/receive_row_layout.xml
+++ b/app/src/main/res/layout/receive_row_layout.xml
@@ -3,14 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:elevation="10dp"
+    android:layout_height="160dp"
     android:layout_marginStart="16dp"
-    android:layout_marginEnd="16dp"
     android:layout_marginTop="8dp"
-    app:cardCornerRadius="20dp"
+    android:layout_marginEnd="16dp"
+    android:elevation="8dp"
+    app:cardCornerRadius="8dp"
     app:strokeColor="@color/orange"
-    app:strokeWidth="1dp"
-    android:layout_height="150dp">
+    app:strokeWidth="2dp">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -30,11 +31,12 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/space_grotesk_regular"
-            android:text="@string/donated_food_item"
+            android:text="Donation"
             android:textColor="@color/black"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="HardcodedText" />
 
         <TextView
             android:id="@+id/description"
@@ -49,7 +51,8 @@
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/donation" />
+            app:layout_constraintTop_toBottomOf="@+id/donation"
+            tools:ignore="HardcodedText" />
 
         <ImageView
             android:id="@+id/donorPhoneNumber"
