--- a/app/src/main/res/layout/fragment_donate.xml
+++ b/app/src/main/res/layout/fragment_donate.xml
@@ -12,16 +12,7 @@
         android:orientation="vertical">
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <androidx.appcompat.widget.Toolbar
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:title="Home"
-                app:titleTextAppearance="@font/space_grotesk_regular"
-                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
-                app:titleTextColor="@color/white"
-                android:id="@+id/toolbar"/>
-        </com.google.android.material.appbar.AppBarLayout>
+            android:layout_height="wrap_content"/>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
